@@ -3,6 +3,9 @@
 -------------------------------------------------
 - removed "-lpanel -lncurses" from all_libraries
 - fixed network code (netconnection, nettransportssl etc)
+- base/plugindescr: added function 
+   GWEN_PluginDescription_GetLongDescrByFormat() to retrieve HTML and other
+   formats of descriptions.
 
 
 2004/08/09: Martin Preuss<martin@libchipcard.de>
